--- a/examples/package.json
+++ b/examples/package.json
@@ -7,15 +7,17 @@
     "baconjs": "^0.7.12",
     "smoothie": "^1.23.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "vinyl-source-stream": "^0.1.1",
+    "gulp-notify": "^1.3.1",
+    "gulp": "^3.6.2",
+    "browserify": "^4.1.6",
+    "watchify": "^0.10.1",
+    "gulp-less": "^1.2.3",
+    "gulp-autoprefixer": "0.0.7"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-css": "catw -c 'lessc -' 'style/*.less' -o static/bundle.css -v",
-    "watch-js": "watchify browser/*.js -o static/bundle.js -dv",
-    "watch": "npm run watch-css & npm run watch-js",
-    "build-css": "catw -c 'lessc -' 'style/*.less' > static/bundle.css",
-    "build-js": "browserify browser/*.js > static/bundle.js",
-    "build": "npm run build-css && npm run build-js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC"
