--- a/examples/package.json
+++ b/examples/package.json
@@ -7,6 +7,17 @@
     "baconjs": "^0.7.12",
     "smoothie": "^1.23.0"
   },
+  "browser": {
+    "pusher": "./browser/vendors/pusher.js"
+  },
+  "browserify-shim": {
+    "pusher": "Pusher"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
   "devDependencies": {
     "vinyl-source-stream": "^0.1.1",
     "gulp-notify": "^1.3.1",
@@ -14,7 +25,8 @@
     "browserify": "^4.1.6",
     "watchify": "^0.10.1",
     "gulp-less": "^1.2.3",
-    "gulp-autoprefixer": "0.0.7"
+    "gulp-autoprefixer": "0.0.7",
+    "browserify-shim": "^3.5.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
